Navbar fixed not responsive

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -4,6 +4,7 @@ body,
 html {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   height: 100vh !important;
   min-height: 100vh !important;
   max-height: 100vh !important;
@@ -55,6 +56,10 @@ h4 {
 .dark-background {
   background-color: $secondary;
   color: $white;
+
+  a {
+    color: $white;
+  }
 }
 
 .overlay {
