--- a/resources/assets/styles/layouts/gutenberg/_banner-section.scss
+++ b/resources/assets/styles/layouts/gutenberg/_banner-section.scss
@@ -22,7 +22,6 @@ section.banner {
 
   .stats-ctas {
     position: absolute;
-    width: 100%;
     height: 415px;
     top: 25%;
   }
